[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
array-init = "2.1.0"

[[bin]]
name = "es1"
path = "src/bin/es1/es.rs"

[[bin]]
name = "es1_pt2"
path = "src/bin/es1_pt2/es.rs"

[[bin]]
name = "es2"
path = "src/bin/es2/es.rs"

[[bin]]
name = "es2_pt2"
path = "src/bin/es2_pt2/es.rs"

[[bin]]
name = "es3"
path = "src/bin/es3/es.rs"

[[bin]]
name = "es3_pt2"
path = "src/bin/es3_pt2/es.rs"
