[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"
[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
array-init = "2.1.0"
memoize = "0.4.1"
rayon = "1.7.0"
iter_tools = "0.1.4"
regex = "1.9.5"
lazy_static = "1.4.0"
anyhow = { version = "1.0.75", features = [] }
num = { version = "0.4.1", features = [] }
itertools = "0.10.5"

[[bin]]
name = "es1"
path = "src/bin/es1/es.rs"

[[bin]]
name = "es1_pt2"
path = "src/bin/es1_pt2/es.rs"

[[bin]]
name = "es2"
path = "src/bin/es2/es.rs"

[[bin]]
name = "es2_pt2"
path = "src/bin/es2_pt2/es.rs"

[[bin]]
name = "es3"
path = "src/bin/es3/es.rs"

[[bin]]
name = "es3_pt2"
path = "src/bin/es3_pt2/es.rs"

[[bin]]
name = "es4"
path = "src/bin/es4/es.rs"

[[bin]]
name = "es4_pt2"
path = "src/bin/es4_pt2/es.rs"

[[bin]]
name = "es5"
path = "src/bin/es5/es.rs"

[[bin]]
name = "es5_pt2"
path = "src/bin/es5_pt2/es.rs"

[[bin]]
name = "es6"
path = "src/bin/es6/es.rs"

[[bin]]
name = "es6_pt2"
path = "src/bin/es6_pt2/es.rs"